# daneshyar-educational-content-engine

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  DIAGNOSIS-FA.md  DOI-INTEGRATION-REPORT.json  Dockerfile  GITHUB_PAGES_SETUP_FA.md  LICENSE  Makefile  README-FA.md  README-FA.txt  README-INSTALL-FA.md  README-REPAIR-FA.md  README-UPDATE-FA.md  README.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  ZENODO_COPY_PASTE.txt  docker-compose.yml  manifest.json  pyproject.toml  render.yaml  repair-manifest.json  validation.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  dependencies.py  factory.py  models.py  public_pages.py  public_routes.py  rate_limit.py  routes.py  schemas.py  service_container.py
app/public/: author.html  demo-guide.html  index.html
app/services/: book_service.py  chunking.py  embeddings.py  generators.py  llm.py  pdf_ingestion.py  pptx_export.py  retrieval.py  text_utils.py
app/static/: app.js  styles.css
app/templates/: base.html  book.html  index.html
daneshyar_educational_content_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION_PROTOCOL.md  GITHUB_PAGES_FRONTEND.md  MVP_SCOPE.md  PRIVACY_PUBLIC_BETA.md  PUBLIC_BETA_DEPLOYMENT.md  author.html  citation.html  config.js  demo-guide.html  index.html
scripts/: create_demo_book.py
tests/: test_app.py  test_asset_exports.py  test_chunking.py  test_pdf_ingestion.py  test_persian_pdf_quality.py  test_public_beta.py
