[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daneshyar-educational-content-engine"
version = "0.2.0"
description = "A public beta that accepts user-supplied PDFs and converts them into grounded educational assets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Faramarz Kowsari"},
  {name = "Dr. Safieh Siadat"}
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "PyMuPDF>=1.24,<2.0",
  "scikit-learn>=1.5,<2.0",
  "numpy>=1.26,<3.0",
  "python-pptx>=1.0,<2.0",
  "openai>=1.50,<3.0",
  "httpx>=0.27,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pytesseract>=0.3.13,<1.0",
  "Pillow>=10.4,<13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
